rust/macros/tests/invalid/target/debug/deps/no_comma_rs-57bb82b984024959.d
/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/no_comma_rs-57bb82b984024959.rmeta: no-comma.rs

/home/jai/Rust/Exercism/rust/macros/tests/invalid/target/debug/deps/no_comma_rs-57bb82b984024959.d: no-comma.rs

no-comma.rs:
